# peia-primer-examen-parcial

./: pyproject.toml  resolucion.ipynb
parciales/primero/: resolucion.ipynb
parciales/segundo/: resolucion.ipynb
parciales/tercero/: resolucion.ipynb
