[project]
name = "primer-examen-parcial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipython>=8.10.0",
]
